<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vinlien</string>
    <string name="settings_title">Settings</string>
    <string name="server_url_label">Server URL</string>
    <string name="server_url_hint">http://192.168.1.100:8080</string>
    <string name="setup_subtitle">Enter the address of your Vinlien server</string>
    <string name="connect_button">Connect</string>
    <string name="save_button">Save &amp; Reconnect</string>
    <string name="settings_saved">Settings saved</string>
    <string name="notification_channel_name">Music Playback</string>
    <string name="notification_channel_desc">Vinlien playback controls</string>
    <string name="action_previous">Previous</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="menu_settings">Settings</string>
    <string name="connection_error">Could not connect to server</string>
    <string name="retry_button">Retry</string>
    <string name="change_server_button">Change Server</string>
</resources>
